--- a/ExaminationSystem/ExaminationSystem.csproj
+++ b/ExaminationSystem/ExaminationSystem.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="DB\Json\" />
     <Folder Include="ExamService\Interfaces\" />
   </ItemGroup>
 
